added message to landing page

--- a/institutional/templates/landing.html
+++ b/institutional/templates/landing.html
@@ -10,12 +10,37 @@
     {% include "nav_base.html"%}
 
     {% block content %}
+    <h1 class='bigger'>How can I help you?</h1>
     <article class="px-3">
-        <h1>Where is all the money?</h1>
-        <p class="lead"> I wanted to collect more information to make better investment decisions.  I wanted to more information in order to create more relationships between the main street economy and the Wall Street market.</p>
-        <p class="lead"> I then wanted more and more information to understand how money flows through the securities markets.  I then wante dto understand the overarching economic factors that contribute to good investment decisions.</p>
-        <p class="lead"> This the marriage of all the micro and macro economic data with a sprinkle of accounting principles and functions.</p>
-        <p class="last_line"> If you had a place to stand and all the data together in one place could you move the investing world.</p>
+        <p>The purpose of this website is to help investors and researchers that use SEC data.  How can you make a better decision?  You gather more information, more numbers, and then you analyze those numbers.  BOOM!  Decision Making Simplified!</p>
+        <p>Of Course I&#39;m joking.  It is not that simple.  So What can you expect in this website?  You can expect accurate data that can be used for analysis.  You can expect simplified data that can be used to create models.  So what you can expect is the building blocks for creating something.</p>
+        <p>The focus is on institutional investment managers, the Whales, the Big Money firms that buy and sell and move the markets.  These market players have a huge <a href="https://finance.wharton.upenn.edu/~keim/research/ChangingInstitutionPreferences_21Aug2012.pdf" target="_blank">influence</a> on a stock you own.</p>
+        <p>SEC classification of <a href="https://www.investor.gov/introduction-investing/investing-basics/glossary/form-13f-reports-filed-institutional-investment" target="_blank">institutional investment managers</a>.  Simply: They have at least &#36;100M available for investment.</p>
+        <p>I live in the world of questions so I will write this introduction through the lens of questions.  The data on the website should answer questions.  So ask some questions?</p>
+        <p>When is a good time to buy a stock?  When the price goes down, of course BUT (which negates the previous statement) this is true if you think the share price will increase in the future.</p>
+        <p>When will the price increase?  When more buyers request purchase of the security then there are sellers but you don't always need a large number of buyers you could settle for one buyer that requests an outsided large number of shares of a single security.</p>
+        <p>How would I know if a Whale wants a specific stock?  Look at their past purchases, get in the head of their decision makers, ask them what they will do next.</p>
+        <p>Trying to predict others behavior is fun activity if you don't mind being incorrect a majority of the time.  "Smart money" (professionals? people that have a lot to lose if they make bad decisions) worries more the return and the error rate; really they worry about their relationship.</p>
+        <p>I told you before this website focuses on the institutional investment managers, that is because they are the "smart money" and love them or hate them they can make the market move with their decisions.</p>
+        <p>Probably an intelligent move to at least know what have done, and have some inkling about what they <u>might do</u> in the future.</p>
+        <p>How can you be more like smart money?  Use all the available to data to make good decisions.</p>
+        <p>Thankfully I am here to help.  I will give you data.  You make the good decision.</p>
+    </article>
+    <h1 class='bigger'>Okay show me something...</h1>
+    <article class="px-3">
+    <p>Curious?  Good, stay curious it is a great quality.</p>
+    <p>First step: Click one of the links at the top of the page.  Each page will provide a list that can be filtered down providing more granular details about that subject.</p>
+    <p>I structured the website in a step-ladder fashion, you will be presented with a large, macro, set of information and then you can filter that information down to some actionable set of information.</p>
+    <p>Example: You are wondering about an institutional investor so you click on the Institutional Investor List.</p>
+    <ol>
+    <li>You click on the Institutional Investor List</li>
+    <li>You search for your interesting Instituional Investor</li>
+    <li>This click will show you their most recent security holdings based on their most recent Form 13K filings</li>
+    <li>From this point you can&#58;</li>
+    <li>You can filter their holdings</li>
+    <li>You can view their past holdings</li>
+    <li>You can see a graph representation of their holdings to see the changes from one time period to another time period</li>
+    </ol>
     </article>
     {% endblock %}
 </article>
