--- a/institutional/user/templates/html/cik.html
+++ b/institutional/user/templates/html/cik.html
@@ -1,13 +1,57 @@
 {% extends 'base.html' %}
 {%load static %}
+{%block topblurb%}
+<h1>Companies and Their Cik and Cusips associated with that Cik </h1>
+{%endblock%}
 
-{% block content %} <h1>CIK</h1>
+{% block content %}
+
+
+  <section id="body_cik" class="container-fluid">
+
+      <table id="table_id" class="table">
+
+      <thead>
+        <tr>
+
+
+            <th scope='col'>CIK</th>
+            <th scope='col'>NAME</th>
+            <th scope='col'>TICKER</th>
+
+
+
+        </tr>
+
+
+
+      </thead>
+      <tbody>
+
+        {%for value in object_list%}
+        <tr>
+
+            <td><a href="{{value.get_absolute_url}}">{{value.long_cik}}</a></td>
+            <td><a href="{{value.get_absolute_url}}">{{value.investor}}</a></td>
+            <td><a href="{{value.get_absolute_url}}">{{value.ticker}}</a></td>
+
+
+        </tr>
+        {% endfor %}
+
+
+      </tbody>
+
+    </table>
+
+   </section>
+
 {%endblock%}
 
 {% block scripts %}
-<script>       
-    
-    var context = JSON.parse("{{context|escapejs}}")
-    console.log(context);</script>
 
-    {%endblock%}
+
+    <script charset="utf-8" src="{% static 'script/datatable.js' %}"></script>
+
+{%endblock%}
+
