--- a/institutional/static/css/style.css
+++ b/institutional/static/css/style.css
@@ -5,83 +5,64 @@
 }
 
 html, body{
-    
-    background-color: #FFFAFA;
+
+    background-color: #FFFFFF;
 
 }
 
 html, body, h1, h2, h3, h4, h5, h6 {
-    
+
     font: normal normal 1em monospace;
-    
+
     padding: 0px;
-    
+
     margin: 0px;
 
 }
 
-body {
-    
-    border: 2px solid black;
-    
+p {
+
+    text-align:start;
+}
+
+p::first-letter {
+
+    font-size: 1.3em;
+    font-weight:bold;
+    text-decoration: underline;
+}
+
+u {
+    text-decoration: #f00 wavy underline;
 }
 
 #nav_nav , #div_footer {
-        
+
     border-radius: .75em;
 
 }
 
-#div_logo {
-    
-    
-    
-    border: 2px solid black;
-}
 
-#a_logo {
-    
-    
-    border: 2px solid yellow;
-}
-
-
-#img_logo{
-    
-    border: 2px solid red;
-    
-    
-    
-}
-
-#div_header {
-    
-    border: 2px solid black;
-    
-    background: pink;
-
-    
-}
 
 #div_nav > ul > li > a:hover, #div_nav > ul > li > a:focus {
-    
-    border: 3px solid black;
-    
-    border-radius: .75em;
-    
+
+    border: 1px solid black;
+
+    border-radius: .2em;
+
     background-color: dodgerblue;
 }
 
 #div_banner_ad {
-    
+
     visibility: hidden;
-    
+
     width:0px;
-    
+
     height:0px;
-    
+
     margin:0px;
-    
+
     padding:0px;
 }
 
@@ -90,139 +71,122 @@ body {
               and (min-width:100px){
 
     #div_banner_ad {
-    
-        visibility: visible;
-        
-        border: 2px solid orange;
 
-        background: yellow;
+        visibility: visible;
+
 
         max-width: 100%;
 
         max-height: 200px;
-        
+
         min-height: 100px;
-        
+
         min-width: 400px;
 
-        
-    
+
+
     }
 }
 
 #div_banner_ad img {
-    
+
     width: 100%;
-    
+
     height: 100%;
-    
+
     margin: 0px;
-    
+
     padding: 0px;
 
     object-fit: scale-down;
 }
-#top_blurb {
-    
-    border: 3px solid chartreuse;
-    
-}
+
 #div_rside_ad {
-    
+
     visibility: hidden;
-    
+
     width: 0px;
-    
+
     height: 0px;
-    
+
     margin: 0px;
-    
+
     padding: 0px;
-    
+
 }
 
-@media screen and (min-height:600px) 
+@media screen and (min-height:600px)
               and (min-width:600px){
 
     #div_rside_ad {
-        
-        visibility: visible;
-    
-        border: 2px solid purple;
 
-        background: salmon;
+        visibility: visible;
 
         max-width: 500px;
 
         max-height: 500px;
-        
+
         min-height: 250px;
-        
+
         min-width: 350px;
-    
+
     }
 }
 
 #div_rside_ad img {
-    
+
     width: 100%;
-    
+
     height: 100%;
-    
+
     margin: 0px;
-    
+
     padding: 0px;
 
     object-fit: scale-down;
-    
+
 }
 #div_main_content {
-    
-    border: 2px solid lime;
-        
+
     width:100%;
-    
+
     height: 100%;
-    
+
     min-height: 45%;
-    
+
     min-width: 60%;
 }
 
 
 .accordion-button {
-        
+
     border: 2px solid black;
-    
+
     background-color: lime;
-       
+
 }
 
 #div_footer_ad {
-    
+
     visibility: hidden;
-        
+
     border: 2px solid navy;
-    
+
     width: 0px;
-    
+
     height: 0px;
-    
+
     margin: 0px;
-    
+
     padding: 0px;
 
 }
 @media screen and (min-height:100px)
               and (min-width:100px){
-    
+
     #div_footer_ad {
-        
+
         visibility: visible;
-    
-        border: 2px solid navy;
-        
-        background: blue;
 
         max-width: 100%;
 
@@ -235,22 +199,22 @@ body {
 }
 
 #div_footer_ad img {
-    
+
     width: 100%;
-    
+
     height: 100%;
-    
+
     margin: 0px;
-    
+
     padding: 0px;
 }
-    
+
 }
 
 #div_footer {
-    
+
     font-size: .75em;
-    
+
 }
 
 #table_id{
@@ -258,21 +222,8 @@ body {
     width: 100%;
 }
 
-article > article > p.last_line::before {
-    
-    content: "Something";
-    animation: animate infinite 5s;
+.bigger {
+
+    font-size: 2em;
+
 }
-
-    @keyframes animate {
-
-        0%{
-            content: "Ticker SYMBOL";
-        }
-        50%{
-            content: "TICKER SYMBOL";
-        }
-        75%{
-            content: "TICKER Symbol";
-        }    
-    }
