--- a/institutional/templates/landing.html
+++ b/institutional/templates/landing.html
@@ -5,7 +5,7 @@
 {% include "head_base.html"%}
 
 
-<body class="d-flex h-100 text-center">
+<body class="d-flex h-100">
 <article class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     {% include "nav_base.html"%}
 
@@ -25,22 +25,53 @@
         <p>Probably an intelligent move to at least know what have done, and have some inkling about what they <u>might do</u> in the future.</p>
         <p>How can you be more like smart money?  Use all the available to data to make good decisions.</p>
         <p>Thankfully I am here to help.  I will give you data.  You make the good decision.</p>
+        <p>If you want to know about the Treasury Bond Yield Curve the New York Federal Reserve is <a href="https://www.newyorkfed.org/research/capital_markets/ycfaq#/interactive" target="_blank" >here to help.</a></p>
     </article>
     <h1 class='bigger'>Okay show me something...</h1>
     <article class="px-3">
-    <p>Curious?  Good, stay curious it is a great quality.</p>
-    <p>First step: Click one of the links at the top of the page.  Each page will provide a list that can be filtered down providing more granular details about that subject.</p>
-    <p>I structured the website in a step-ladder fashion, you will be presented with a large, macro, set of information and then you can filter that information down to some actionable set of information.</p>
-    <p>Example: You are wondering about an institutional investor so you click on the Institutional Investor List.</p>
-    <ol>
-    <li>You click on the Institutional Investor List</li>
-    <li>You search for your interesting Instituional Investor</li>
-    <li>This click will show you their most recent security holdings based on their most recent Form 13K filings</li>
-    <li>From this point you can&#58;</li>
-    <li>You can filter their holdings</li>
-    <li>You can view their past holdings</li>
-    <li>You can see a graph representation of their holdings to see the changes from one time period to another time period</li>
-    </ol>
+        <p>Curious?  Good, stay curious it is a great quality.</p>
+        <p>First step: Click one of the links at the top of the page.  Each page will provide a list that can be filtered down providing more granular details about that subject.</p>
+        <p>I structured the website in a step-ladder fashion, you will be presented with a large, macro, set of information and then you can filter that information down to some actionable set of information.</p>
+        <p>Example: You are wondering about an institutional investor so you click on the Institutional Investor List.</p>
+        <p>Steps:</p>
+        <ol>
+            <li>You click on the Institutional Investor List</li>
+            <li>You search for your interesting Instituional Investor</li>
+            <li>This click will show you their most recent security holdings based on their most recent Form 13K filings</li>
+            <li>From this point you can&#58;</li>
+            <li>You can filter their holdings</li>
+            <li>You can view their past holdings</li>
+            <li>You can see a graph representation of their holdings to see the changes from one time period to another time period</li>
+        </ol>
+        <p>Example 2: You are wondering about a security - Apple has multiple securities - Apple for Example</p>
+        <p>Steps:</p>
+        <ol>
+            <li>You click on the Central Index Key, Cusip, Ticker link</li>
+            <li>You search for your company name, cusip number, ticker symbol</li>
+            <li>You click on your interested company</li>
+            <li>The next page shows all the possible securities provided by that company.  Oh La La so many choices</li>
+            <li>You click on one of the selections</li>
+            <li>You will be presented with the list of institutional investors can currently holding that security</li>
+        </ol>
+    </article>
+    <article class="px-3">
+
+        <p>Have you ever wondered if the farming industry relies on the health care industry?  Have you thought who does IBM pay in order to produce those great products?</p>
+        <p>If you have never asked that question, now it is in your head.  So you are welcome.  For those that have pondered these questions I think I have some data for you.</p>
+        <p>I decided to use the US Bureau of Economic Analysis to ask this question because I am a proud American.  'MERICA 'MERICA!!!! and...</p>
+        <p>They track US industries and most the institutional investors tracked by the SEC are US companies so... moving on</p>
+        <p>The Bureau of Economic Analysis (BEA) provides some really cool data, they provide these dryly (my opinion is valid) labeled "Input - Output" tables.</p>
+        <p>These tables come in many versions, and the version that I incorporate on this website is the requirements input output table.</p>
+        <p>This table shows the portion of a dollar spent by an industry on a specific commodity.</p>
+        <p>I know at this point you might say so what?</p>
+        <p>I think this is really interesting because these tables give an actual numerical weight (in this case it may be better to say %) that can be used to figure out the whole dollar amount of revenue a specific company spends buying commodities/services to produce their product/service.</p>
+        <p>Question time again &#36; Would it be useful to know if one industry is heavily dependent on a specific commodity/service in order to produce its own product?</p>
+        <p>What happens when that commodity become scarce or plentiful?</p>
+        <p>What should I see in the companies financials in those situations?</p>
+        <p>Given these observations, can I make predictions about other investors sentiments and subsequent actions in regards to buying or selling this companies securities?</p>
+        <p>How much wood could a woodchuck chuck if we all simultaneously prayed "chuck wood you woodchuck"?  None</p>
+        <p>I digress with a joke but I am serious about the decision-making possibilities that come from connecting the BEA data to any companies financial data.</p>
+
     </article>
     {% endblock %}
 </article>
