--- a/institutional/user/templates/html/apple.html
+++ b/institutional/user/templates/html/apple.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {%load static %}
 
-{% block content %} <h1>Apple</h1>
+{% block content %} <h1>Company</h1>
 {%endblock%}
 
 {% block scripts %}
