--- a/institutional/user/templates/html/industry.html
+++ b/institutional/user/templates/html/industry.html
@@ -49,4 +49,8 @@
 {%endblock%}
 
 {% block scripts %}
+
+
+    <script charset="utf-8" src="{% static 'script/datatable.js' %}"></script>
+
 {%endblock%}
