--- a/institutional/user/templates/html/industry_single.html
+++ b/institutional/user/templates/html/industry_single.html
@@ -42,3 +42,10 @@
 
 {%endblock%}
 
+{% block scripts %}
+
+
+    <script charset="utf-8" src="{% static 'script/datatable.js' %}"></script>
+
+{%endblock%}
+
