--- a/institutional/templates/head_base.html
+++ b/institutional/templates/head_base.html
@@ -12,12 +12,18 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/datatables.min.css'%}">
-    
+
     <script charset="utf-8" src="{% static 'script/bootstrap.bundle.min.js'%}" ></script>
     <script charset="utf-8" src="{% static 'script/jquery-3.6.1.min.js' %}"></script>
     <script charset="utf-8" src="{% static 'script/datatables.min.js' %}"></script>
-        
-    
+
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7525910399433491" crossorigin="anonymous"></script>
+
+
+
+
+
     <title>Securities, Equities, Institutional Investors</title>
 </head>
-    
+
