--- a/institutional/templates/nav_base.html
+++ b/institutional/templates/nav_base.html
@@ -51,7 +51,7 @@
 
                 <li class="nav-item">
 
-                    <a class="nav-link" aria-current="page" href="{% url 'ii' %}">
+                    <a class="nav-link" aria-current="page" href="{% url 'investor' %}">
                         Institutional Investor List
                     </a>
 
@@ -71,6 +71,14 @@
 
                     <a class="nav-link" aria-current="page" href="{% url 'apple' %}">
                         Apple
+                    </a>
+
+                </li>
+
+                <li class="nav-item">
+
+                    <a class="nav-link" aria-current="page" href="{% url 'micro' %}">
+                        Microsoft
                     </a>
 
                 </li>
