--- a/institutional/user/templates/html/investor_single.html
+++ b/institutional/user/templates/html/investor_single.html
@@ -25,10 +25,7 @@
         {%for value in object_list%}
         <tr>
 
-            <td><a href="{{value.get_absolute_url}}">{{value.name }}</a></td>
-            <td><a href="{{value.get_absolute_url}}">{{value.cik}}</a></td>
-
-
+            <td><a href="{{value.get_absolute_url}}">{{value}}</a></td>
 
         </tr>
         {% endfor %}
@@ -41,3 +38,9 @@
 
 {%endblock%}
 
+{% block scripts %}
+
+
+    <script charset="utf-8" src="{% static 'script/datatable.js' %}"></script>
+
+{%endblock%}
